fix overflow on recipe page paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,14 +161,13 @@ footer {
 
 #recipe-ofd {
     background-color: white;
-    width: 80%;
-    height: 500px;
+    width: 100%;
+    height: auto;
     margin: 0 auto;
     position: relative;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    border-radius: 30px;
     overflow: hidden;
 }
 
@@ -188,16 +187,12 @@ footer {
     background-image: url('../images/recipe-img.jpg');
     height: 200px;
     width: auto;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
 }
 
 #recipe-ofd-heading {
     background-color: rgba(0, 0, 0, 0.6);
     height: 100%;
     width: 100%;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
 }
 
 #recipe-ofd-heading>h2 {
@@ -362,6 +357,14 @@ footer {
     grid-template-columns: 50% 50%;
     grid-gap: 50px;
     justify-items: center;
+    margin:0;
+    background-color: slategrey;
+}
+
+#recipe-cards > h2{
+    grid-column: 1 / -1;
+    color: white !important;
+    padding-top: 20px;
 }
 
 /* Recipe Cards */
@@ -369,8 +372,7 @@ footer {
 .recipe-card{
     width: 500px;
     height: 500px;
-    border: solid 10px black;
-    background-color: salmon;
+    border: solid 10px white;
 }
 
 .recipe-card > div{
@@ -458,10 +460,7 @@ footer {
     }
 
     #recipe-cards{
-        height: 100px;
-        width: 100%;
-        position: absolute;
-        top: 1200px;
+        grid-template-columns: 100%;
     }
 
     #recipe-one{
@@ -492,7 +491,7 @@ footer {
 
 }
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 1000px){
 
     #full-rotd-photo{
         margin: 0 auto;
@@ -510,8 +509,9 @@ footer {
     }
 
     #full-rotd-container{
-        height: 1000px;
+        min-height: 1500px;
         top: 150px;
+
     }
 
 }
